--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "mysql2": "^3.9.7",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -38,7 +39,8 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-pagination": "^2.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
