--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mysql2": "^3.9.7",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.13",
