--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.9",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.13",
@@ -51,8 +52,9 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.3.9",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.10",
     "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^4.0.1",
